--- a/client/src/components/navbar/styles.scss
+++ b/client/src/components/navbar/styles.scss
@@ -1,22 +1,32 @@
+@import '../../base';
+
 .navbar {
+    border-bottom: 1px solid white;
+    margin-bottom: 20px;
+
     .navbar-content {
         display: flex;
         max-width: 1280px;
         margin: auto;
         align-items: center;
-        height: 60px;
-    }
+        height: 80px;
 
-    .search-bar {
-        padding: 0 16px;
+        .logo {
+            width: 50px;
+        }
     }
     
     .user-area {
         display: flex;
         margin-left: auto;
+        align-items: center;
+        
+        .button {
+            @include button;
+        }
 
         .user-margin {
-            padding: 0 8px;
+            padding-left: 15px;
         }
     }
 }
