--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -1,54 +1,57 @@
+@import '../../base';
+
 .home {
-    .posts {
-        margin-top: 50px;
+    max-width: 1280px;
+    margin: auto;
+
+    .thumbnail {
+        position: relative;
+
+        .image-cover {
+            width: 100%;  
+            height: 500px;
+            display: block;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+
+        .shadow {
+            background: -webkit-linear-gradient(top,rgba(17,17,17,0),#111111);
+            background: -moz-linear-gradient(top,rgba(17,17,17,0),#111111);
+            width: 100%;
+            max-width: 1280px;
+            height: 250px;
+            position: absolute;
+            bottom: 0;
+        }
+
+        .cover-text {
+            position: absolute;
+            bottom: 0;
+            font-size: 50px;
+            margin-left: 10px;
+        }
+
+    }
+
+    .categories {
         display: flex;
-        flex-direction: column;
-        gap: 150px;
-
-        .post {
-            display: flex;
-            gap: 100px;
-            &:nth-child(2n+1) {
-                flex-direction: row-reverse;
-            }
-
-            .img {
-                flex: 2;
-
-                img {
-                    width: 100%;
-                    max-height: 400px;
-                    object-fit: cover;
-                }
-            }
-
-            .content {
-                flex: 3;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-
-                .link {
-                    text-decoration: none;
-                    color: inherit;
-                }
-
-                button {
-                    width: max-content;
-                    padding: 10px 20px;
-                    border: none;
-                    cursor: pointer;
-                    background-color: white;
-                    border: 1px solid black;
-
-                    &:hover {
-                        border: 1px solid white;
-                        background-color: black;
-                        color: white;
-                    }
-                }
-            }
+        justify-content: center;
+        margin: 20px 0 20px 0;
+        button {
+            @include button;
         }
     }
 
+    .posts-wrapper {
+
+        .posts {
+
+            img {
+                width: 30%;
+                height: 300px;
+            }
+        }
+    }
 }
+
