--- a/client/src/pages/single/styles.scss
+++ b/client/src/pages/single/styles.scss
@@ -1,6 +1,8 @@
 .single {
     display: flex;
     gap: 50px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 
     .content {
         flex: 5;
