--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -3,6 +3,7 @@
 .home {
     max-width: 1280px;
     margin: auto;
+    margin-top: 100px;
 
     .thumbnail {
         position: relative;
@@ -37,20 +38,58 @@
     .categories {
         display: flex;
         justify-content: center;
-        margin: 20px 0 20px 0;
+        margin: 50px 0 50px 0;
+
         button {
             @include button;
         }
     }
 
     .posts-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 200px;
+        margin-bottom: 100px;
 
         .posts {
+            display: flex;
+            gap: 100px;
 
-            img {
-                width: 30%;
-                height: 300px;
+            &:nth-child(2n+1) {
+                flex-direction: row-reverse;
             }
+
+            .post-img {
+                flex: 2;
+                position: relative;
+
+                img {
+                    width: 100%;
+                    min-width: 200px;
+                    max-height: 400px;
+                    object-fit: cover;
+                }
+            }
+
+            .post-text {
+                flex: 3;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                h1 {
+                    font-size: 48px;
+                }
+
+                p {
+                    font-size: 18px;
+                }
+
+                button {
+                    @include button;
+                }
+            }
+
         }
     }
 }
