a lot of things :D

--- a/client/src/pages/login/styles.scss
+++ b/client/src/pages/login/styles.scss
@@ -1,3 +1,5 @@
+@import "../../base";
+
 .login {
     display: flex;
     flex-direction: column;
@@ -10,8 +12,16 @@
         flex-direction: column;
         padding: 20px;
 
+        button {
+            @include button;
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
         input {
             margin-bottom: 30px;
+            background-color: black;
+            color: white;
         }
 
         p {
