--- a/client/src/components/menu/styles.scss
+++ b/client/src/components/menu/styles.scss
@@ -1,27 +1,21 @@
-.post {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+@import "../../base";
 
-    img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-    }
+.menu {
+    margin: 100px 0;
 
-    button {
-        width: max-content;
-        padding: 10px 20px;
-        border: none;
-        cursor: pointer;
-        background-color: white;
-        border: 1px solid black;
-        margin-bottom: 10px;
+    .post {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
 
-        &:hover {
-            border: 1px solid white;
-            background-color: black;
-            color: white;
+        img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        button {
+            @include button;
         }
     }
 }
