--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -76,6 +76,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+                text-overflow: ellipsis;
 
                 h1 {
                     font-size: 48px;
