--- a/client/src/pages/register/styles.scss
+++ b/client/src/pages/register/styles.scss
@@ -1,3 +1,5 @@
+@import '../../base';
+
 .register {
     display: flex;
     flex-direction: column;
@@ -9,6 +11,12 @@
         display: flex;
         flex-direction: column;
         padding: 20px;
+
+        button {
+            @include button;
+            width: 100%;
+            margin-bottom: 20px;
+        }
 
         input {
             margin-bottom: 30px;
