--- a/client/src/pages/single/styles.scss
+++ b/client/src/pages/single/styles.scss
@@ -1,11 +1,12 @@
 .single {
     display: flex;
     gap: 50px;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    max-width: 1280px;
+    margin: auto;
 
     .content {
         flex: 5;
+        margin: 100px 0;
 
         img {
             width: 100%;
