--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -82,8 +82,13 @@
                     font-size: 48px;
                 }
 
-                p {
+                .text {
+                    display: inline-block;
                     font-size: 18px;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    max-height: 5.1em;
+                    line-height: 1.6em;
                 }
 
                 button {
