--- a/client/src/pages/single/styles.scss
+++ b/client/src/pages/single/styles.scss
@@ -19,7 +19,7 @@
             align-items: center;
             gap: 10px;
 
-            img {
+            .user-img {
                 width: 50px;
                 height: 50px;
                 border-radius: 50%;
@@ -32,7 +32,13 @@
 
             .edit {
                 display: flex;
-                gap: 5px;
+                gap: 10px;
+
+                .icon {
+                    width: 30px;
+                    height: 30px;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -40,6 +46,15 @@
     .post-content {
         display: flex;
         flex-direction: column;
+
+        h1 {
+            font-size: 48px;
+        }
+
+        .post-text {
+            font-size: 18px;
+            line-height: 1.5em;
+        }
     }
 
     .menu {
