--- a/client/src/pages/write/styles.scss
+++ b/client/src/pages/write/styles.scss
@@ -1,9 +1,13 @@
+@import "../../base";
+
 .add {
-    margin-top: 100px;
     display: flex;
     gap: 20px;
+    max-width: 1280px;
+    margin: auto;
 
     .content {
+        margin-top: 100px;
         flex: 5;
         display: flex;
         flex-direction: column;
@@ -12,6 +16,8 @@
         input {
             padding: 10px;
             border: 1px solid lightgray;
+            background-color: black;
+            color: white
         }
 
         .editor-container {
@@ -25,11 +31,12 @@
         }
     }
 
-    .menu {
+    .menu-write {
         flex: 2;
         display: flex;
         flex-direction: column;
         gap: 20px;
+        margin-top: 100px;
 
         .item {
             border: 1px solid lightgray;
@@ -38,7 +45,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            color: #555;
+            line-height: 2em;
 
             h1 {
                 font-size: 20px;
@@ -47,6 +54,7 @@
             .file {
                 text-decoration: underline;
                 cursor: pointer;
+                margin-bottom: 10px;
             }
 
             .buttons {
@@ -54,19 +62,12 @@
                 justify-content: space-between;
 
                 :first-child {
-                    cursor: pointer;
-                    color: teal;
-                    background-color: white;
-                    border: 1px solid teal;
-                    padding: 3px 5px;
+                    @include button;
+                    font-size: 15px;;
                 }
 
                 :last-child {
-                    cursor: pointer;
-                    color: white;
-                    background-color: teal;
-                    border: 1px solid teal;
-                    padding: 3px 5px;
+                    @include button;
                 }
             }
         }
