--- a/client/src/components/navbar/styles.scss
+++ b/client/src/components/navbar/styles.scss
@@ -1,7 +1,7 @@
 @import '../../base';
 
 .navbar {
-    border-bottom: 1px solid white;
+    //border-bottom: 1px solid white;
     position: fixed;
     left: 0;
     right: 0;
