--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -31,8 +31,50 @@
             bottom: 0;
             font-size: 50px;
             margin-left: 10px;
+            text-shadow: 3px 3px 2px black;
         }
 
+    }
+
+    .latest {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+        h2 {
+            font-size: 48px;
+        }
+
+        .recent-wrapper {
+            display: flex;
+            flex-direction: row;
+
+            .recent {
+                margin-left: 15px;
+                position: relative;
+
+                .link {
+                    text-decoration: none;
+                    color: white;
+                }
+
+                .recent-img {
+                    img {
+                        width: 400px;
+                        height: 350px;
+                        object-fit: cover;
+                    }
+                }
+
+                    .recent-title {
+                        position: absolute;
+                        bottom: 0;
+                        text-shadow: 3px 3px 2px black;
+                        margin-left: 5px;
+                        font-size: 20px;
+                    }
+            }
+        }
     }
 
     .categories {
