--- a/client/src/components/navbar/styles.scss
+++ b/client/src/components/navbar/styles.scss
@@ -38,5 +38,9 @@
             padding-left: 15px;
             color: white;
         }
+
+        span {
+            cursor: pointer;
+        }
     }
 }
