--- a/client/src/pages/register/styles.scss
+++ b/client/src/pages/register/styles.scss
@@ -20,6 +20,10 @@
 
         input {
             margin-bottom: 30px;
+            background-color: black;
+            color: white;
+            border: none;
+            border-bottom: 1px solid white;
         }
 
         p {
