--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -50,7 +50,7 @@
             flex-direction: row;
 
             .recent {
-                margin-left: 15px;
+                margin: 0 10px;
                 position: relative;
 
                 .link {
@@ -90,7 +90,7 @@
     .posts-wrapper {
         display: flex;
         flex-direction: column;
-        gap: 200px;
+        gap: 100px;
         margin-bottom: 100px;
 
         .posts {
