--- a/client/src/pages/login/styles.scss
+++ b/client/src/pages/login/styles.scss
@@ -22,6 +22,8 @@
             margin-bottom: 30px;
             background-color: black;
             color: white;
+            border: none;
+            border-bottom: 1px solid white;
         }
 
         p {
